v2.0 STABLE Added i18n, fixed overflow on Firefox

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 body{
 	font-family: 'Exo 2', sans-serif;
+    overflow: hidden;
 }
 
 #main{
